--- a/VRT.TextToSpeech.Wpf/VRT.TextToSpeech.Wpf.csproj
+++ b/VRT.TextToSpeech.Wpf/VRT.TextToSpeech.Wpf.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.2" />
     <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="ReactiveUI" Version="17.1.50" />
     <PackageReference Include="ReactiveUI.Fody" Version="17.1.50" />
